# Sahjanand-Mart-Global

./: .env  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  install_and_run.bat  nginx.conf  pyproject.toml  quick_start.py  render.yaml  requirements-dev.txt  requirements.txt  run_app.py  setup.py  start_mart.bat
backend/: app.py  config.py  db.py  models.py  sahjanand_mart.db  schema.sql
backend/static/js/: charts.js
database/: sahjanand_mart.db
database/.tmp.driveupload/: 209
frontend/: billing.html  dashboard.html  inventory.html
sahjanand_mart/: __init__.py  app.py  cli.py  config.py  db.py
sahjanand_mart/static/css/: styles.css
sahjanand_mart/static/js/: billing.js
sahjanand_mart/templates/: dashboard.html
scripts/: backup.sh  deploy.sh  restore.sh
supabase/migrations/: 20250618033102_rough_shrine.sql
templates/: base.html  bill_history.html  billing.html  dashboard.html  gst_reports.html  inventory.html  login.html
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_auth.py
